--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 	</head>
 <body>
 <div class="contenedor">
-	<div class="caja" id="verde"></div>
-	<div class="caja" id="azul" ></div>
+	<div class="caja" id="verde">
+		<div class="caja" id="azul" ></div>
+	</div>
 	<div class="caja" id="morado"></div>
 </div>
 
