--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	</head>
 <body>
 <div class="contenedor">
-	<div class="caja" id="verde">
-		<div class="caja" id="azul" ></div>
-	</div>
+	<div class="caja" id="verde"></div>
+	<div class="caja" id="azul" ></div>
 	<div class="caja" id="morado"></div>
+	<div class="caja" id="amarillo"></div>
 </div>
 
 </body>
